# graph-drawing

./: .gitignore  LICENSE  README.md  graph.gv  intersect.py  min_crossings.py  pyproject.toml  read_write.py  rename_files.py
problems/: problem-00.json  problem-06.json  problem-07.json  problem-11.json  problem-12.json  problem-13.json  problem-14.json  problem-9.json
test_problems/: test-1.json  test-2.json  test-3.json
