[tool.poetry]
name = "graph-drawing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
shapely = "^2.0.4"
numpy = "^2.0.0"
graphviz = "^0.20.3"
networkx = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
